--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.mut_jaeryo.rss">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,18 +12,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".view.RssDetailActivity"
-            android:parentActivityName=".view.MainActivity"
-            android:label="@string/news_activity_name"></activity>
-        <activity android:name=".view.MainActivity"
-            android:launchMode="singleTop"
-            android:label="@string/main_activity_name">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity android:name=".view.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.RssDetailActivity"
+            android:label="@string/news_activity_name"
+            android:parentActivityName=".view.MainActivity" />
+        <activity
+            android:name=".view.MainActivity"
+            android:label="@string/main_activity_name"
+            android:launchMode="singleTop">
         </activity>
     </application>
 
